cmake_minimum_required(VERSION 4.0)
project(Day_4_5)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day_4_5 main.cpp
        Header/research_data_processor.h
        Header/variadic_statistical_engine.h
        Header/corporate_hierarchy.h
        Header/pointer_simulation.h
        Header/function_template_workshop.h
        Header/student_db.h
        Header/benchmark.h)
